# AC

./: .gitattributes  .gitignore  .travis.yml  AssaultCube.files  AssaultCube.includes  CONTRIBUTING.md  GOVERNANCE.md  MAPPERS_README  PRIVACYPOLICY.md  README.html  README.md  SECURITY.md  TERMS.md  actioncube  actioncube.bat  actioncube.sh  actioncube_server.bat  actioncube_server.sh  assaultcube.bat  assaultcube.sh  assaultcube64.bat  assaultcube_mod.sh  assaultcube_portable.bat  assaultcube_release.bat  assaultcube_server.bat  changelog.txt  check_install.sh  client_desktop_install.sh  install-devlibs.sh  install.sh  install_connectprotocol.sh  install_desktop_menu.sh  install_or_remove_menuitem.sh  server.bat  server.sh  server_wizard.bat  server_wizard.sh  servers.cfg
.github/workflows/: build-linux64.yml
CVSROOT/: avail  checkoutlist  ciabot_cvs.pl  loginfo
ac/: MAPPERS_README  README  README.html  actioncube  actioncube.bat  actioncube.sh  actioncube_server.bat  actioncube_server.sh  assaultcube.bat  assaultcube.sh  install_desktop_menu.sh  server.sh  server_wizard.sh
ac/bin_unix/: ac_client  ac_server  linux_64_client  linux_64_server  linux_client  linux_server  server_wizard
ac/bin_win32/: openal32_readme.txt  readme_OpenAL.txt
ac/bot/: bot_names.txt  bot_skill.cfg  bot_teams.txt
ac/config/: admin.cfg  autoexec.cfg  autoexec.cfg.default  creditmenu.cfg  default_map_settings.cfg  defaults.cfg  docs.cfg  favourites.cfg  firstrun.cfg  keymap.cfg  lights.cfg  locale.cfg  maprot.cfg  menus.cfg  menus_bot.cfg  menus_edit.cfg  menus_multiplayer.cfg  menus_settings.cfg  mono.cfg  motd_en.txt  nicknameblacklist.cfg  prefabs.cfg  resetbinds.cfg  scontext.cfg  scripts.cfg  securemaps.cfg  serverblacklist.cfg  servercmdline.txt  serverpwd.cfg  servers.cfg  sounds.cfg
ac/demos/: 1.cdgz
ac/docs/: How to add to the reference.txt  README.html  README.xml  basics.html  basics.xml  colouredtext.txt  commandline.html  commandline.xml  commonfaqs.html  commonfaqs.xml  config.html  cube_bot-readme.txt  cubedoc2xhtml.xslt  cubeengine.html  cubeengine.xml  cuberef.css  cuberef.xsd  cuberef2xhtml.xslt  cubescript.html  cubescript.xml  cubescriptreference.xsd  docs.css  editref.xml  game.html  game.xml  gamecommands.html  getstarted.html  getstarted.xml  graphicsdrivers.html  history.html  history.xml  interface.html  interface.xml  introduction.html  introduction.xml  known_issues.txt  knownissues.html  knownissues.xml  maneuvers.html  maneuvers.xml  (+25 more)
ac/mods/: !Mods-README.html
ac/source/: AUTHORS  ChangeLog.txt  README.txt  README_CUBEENGINE.txt  adding-maps.txt  packaging_guide.txt  roadmap.txt  src5.tar
ac_menu/widgets/: bg_01.xcf
bin_unix/: ac_client  ac_server  linux_64_client  linux_64_server  linux_client  linux_server  server_wizard
bin_win32/: LICENSE.jpeg.txt  LICENSE.png.txt  LICENSE.zlib.txt  Microsoft_VC80_CRT_x86.msm  create_winservice.bat  readme_OpenAL.txt
bin_win64/: LICENSE.vorbis_ogg.txt  readme_OpenAL.txt
bot/: bot_identities.txt  bot_names.txt  bot_skill.cfg  bot_teams.txt
bot/waypoints/: ac_africa.wpt  ac_alcove.wpt  ac_aqueous.wpt  ac_arabian.wpt  ac_arctic2.wpt  ac_arid.wpt  ac_avenue.wpt  ac_cavern.wpt  ac_coal.wpt  ac_complex.wpt  ac_depot.wpt  ac_desert.wpt  ac_desert2.wpt  ac_desert3.wpt  ac_douze.wpt  ac_dusk.wpt  ac_edifice.wpt  ac_iceroad.wpt  ac_industrial.wpt  ac_ingress.wpt  ac_kazemat.wpt  ac_keller.wpt  ac_lainio.wpt  ac_lotus.wpt  ac_mines.wpt  ac_nocturne.wpt  ac_origin.wpt  ac_outpost.wpt  ac_power.wpt  ac_rampart.wpt  ac_rattrap.wpt  ac_scaffold.wpt  ac_shine.wpt  ac_snow.wpt  ac_stellar.wpt  ac_swamp.wpt  ac_terros.wpt  ac_toxic.wpt  ac_venison.wpt  ac_wasteland.wpt  (+1 more)
config/: admin.cfg  autoexec.cfg  autoexec.cfg.default  autosave.cfg  compatibility.cfg  convert_mapconfig.sh  convert_pre_v1.2_mapconfig.sh  creditmenu.cfg  default_map_settings.cfg  defaults.cfg  docs.cfg  dyngamma.cfg  faq.cfg  favourites.cfg  firstrun.cfg  font.cfg  font_default.cfg  font_serif.cfg  forbidden.cfg  geoip.cfg  keymap.cfg  killmessages.cfg  lights.cfg  locale.cfg  maprot.cfg  mdarray.cfg  menu_voicecom.cfg  menu_voicecom_v1.cfg  menu_voicecom_v2.cfg  menus.cfg  menus_auth.cfg  menus_bot.cfg  menus_edit.cfg  menus_licenses.cfg  menus_mappack.cfg  menus_multiplayer.cfg  menus_settings.cfg  menus_voicecom.cfg  mobile_serverlist.cfg  mono.cfg  (+19 more)
config/autostart/: 0.cfg  checkaccount.cfg  touch.cfg  welcome.cfg
config/opt/: alternateeditbinds.cfg  autosave.cfg  compatibility.cfg  convmap.cfg  faq.cfg  mapeditscripts.cfg  parsestring.cfg  survival.cfg
demos/: .gitignore  sample.cdgz  test.cdgz  tutorial_demo.dmo
docs/: How to add to the reference.txt  HowTo: Add to the reference.txt  README.html  README.xml  ac.css  basics.html  basics.xml  colouredtext.txt  commandline.html  commandline.xml  commonfaqs.html  commonfaqs.xml  config.html  credits.txt  cubedoc.css  cubeengine.html  cubeengine.xml  cuberef.txt  cuberef.xsd  cuberef.xsx  cuberef2cubescript.xslt  cubescript.html  docs.css  editref.html  editref.xml  faqs.html  game.html  game.xml  gamecommands.html  getstarted.html  getstarted.xml  graphicsdrivers.html  history.html  history.txt  history.xml  iefix.js  index.html  interface.html  interface.xml  introduction.html  (+36 more)
docs/autogen/: win32_cuberef2xhtml.bat
mods/: ac_mods_README.html
scripts/: 0.cfg  menu_startup.cfg
source/: ChangeLog.txt  DEVELOPMENT.txt  LICENSE  OS_Specific_packaging.txt  README  README.txt  package_assaultcube.sh  packaging_guide.txt  roadmap.txt  src1  src2.tar  src3.tar  src4.tar  src6.tar  unused_resources.txt
source/android/app/src/main/cpp/: AssaultCubeLib.cpp  AssaultCubeServer.cpp  CMakeLists.txt  build_openal.bat  build_sdl.bat  build_sdl_image.bat  toolchain.android.cmake
source/android/app/src/main/cpp/include/gl4es/: android_debug.h  gl4eshint.h  gl4esinit.h  khash.h
source/android/app/src/main/cpp/include/gl4es/GL/: gl.h  glx.h
(+1652 files in other folders)
